# swiftbot

./: Cargo.toml  README.md
examples/: ble_scan.rs  controller.rs  controller_gilsrs.rs  detect_obj.rs  forwards_backwards.rs  lights_on.rs  list_cams.rs  simon_says.rs  take_still.rs  under_light.rs
src/: api.rs  camera.rs  controls.rs  lib.rs  sensors.rs  sn3218a.rs
src/net/: ble.rs  mod.rs
