[package]
name = "swiftbot"
version = "0.1.0"
edition = "2021"
authors = ["Toby Reay"]
description = "A libary for controlling the swiftbot robot"

[dependencies]
rppal = "0.22.1"
gilrs = "0.11.0"
tokio = { version = "1.41.1", features = ["full"] }
btleplug = { version = "0.11.7", features = ["serde"] }
futures = "0.3.31"
stick = { version = "0.13.0", features = ["gcdb"] }
pasts = "0.14.3"
env_logger = "0.11.6"
rand = "0.9.0"
opencv = "0.94.2"








